seção faq finalizada

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @use "hero";
 @use "shows";
 @use "plans";
+@use "faq";
 @font-face {
     font-family: Avenir;
     src: url(../../assets/fonts/Avenir-Regular.woff2);
