ajustes no mobile

--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -15,6 +15,10 @@
             max-width: 380px;
             width: 100%;
 
+            @media (max-width: 768px) {
+                display: block;
+            }
+
             &:nth-child(2) {
                 background-image: url(../images/fundo_combo_plus.png);
                 background-repeat: no-repeat;
