--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -7,12 +7,23 @@
     text-align: center;
     background-size: cover;
 
+    @media (max-width: 768px) {
+        background-image: url(../images/hero_celular.jpeg);
+        padding-top: 50vw;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
     &__content {
         max-width: 640px;
 
         &__branding {
             max-width: 320px;
             margin: 0 auto 38px;
+
+            @media (max-width: 768px) {
+                max-width: 180px;
+            }
         }
 
         .title--small {
@@ -31,8 +42,17 @@
             display: flex;
             justify-content: space-between;
 
+            @media (max-width: 768px) {
+                display: block;
+            }
+
             &__combo {
                 width: calc(50% - 12px);
+
+                @media (max-width: 768px) {
+                    display: block;
+                    margin-bottom: 24px;
+                }
 
                 img {
                     max-height: 60px;
